WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199421
StorageManager does not need to be a WorkQueueMessageReceiver anymore
https://bugs.webkit.org/show_bug.cgi?id=199421
Summary
StorageManager does not need to be a WorkQueueMessageReceiver anymore
youenn fablet
Reported
2019-07-02 14:24:01 PDT
StorageManager does not need to be a WorkQueueMessageReceiver anymore
Attachments
Patch
(2.00 KB, patch)
2019-07-02 14:32 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-07-02 14:32:48 PDT
Created
attachment 373361
[details]
Patch
WebKit Commit Bot
Comment 2
2019-07-02 16:58:30 PDT
Comment on
attachment 373361
[details]
Patch Clearing flags on attachment: 373361 Committed
r247082
: <
https://trac.webkit.org/changeset/247082
>
WebKit Commit Bot
Comment 3
2019-07-02 16:58:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-07-02 16:59:18 PDT
<
rdar://problem/52556344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug