StorageManager does not need to be a WorkQueueMessageReceiver anymore https://bugs.webkit.org/show_bug.cgi?id=199421

Reviewed by Chris Dumez.

* NetworkProcess/WebStorage/StorageManager.h:


Canonical link: https://commits.webkit.org/213352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247082 268f45cc-cd09-0410-ab3c-d52691b4dbfc